src/test/deca/context/invalid/created/bad_type-return.deca
//Description :
// Test d'un mauvais type de return
//
// Resultats :
// Erreur


class A{
 protected float a;

 int getA(){
  return a;
 }
}

{}
